<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controllers.Activities.AccountActivity"
    android:id="@+id/activity_account_coordinatorLayout">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/activity_account_mainLinearLayout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="150sp"
                android:layout_height="150sp"
                android:id="@+id/activity_account_profilAvatar_imageView"/>
            </RelativeLayout>
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TableRow>
                    <TextView
                        android:textColor="@android:color/white"
                        android:text="@string/pseudonym"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>
                    <EditText
                        android:textColor="@android:color/white"
                        android:id="@+id/activity_account_pseudonym_edittext"
                        android:hint="@string/pseudonym"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" />
                </TableRow>
                <TableRow>
                    <TextView
                        android:textColor="@android:color/white"
                        android:text="@string/firstname"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>
                    <EditText
                        android:textColor="@android:color/white"
                        android:id="@+id/activity_account_firstname_edittext"
                        android:hint="@string/firstname"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" />
                </TableRow>
                <TableRow>
                    <TextView
                        android:textColor="@android:color/white"
                        android:text="@string/lastname"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>
                    <EditText
                        android:textColor="@android:color/white"
                        android:id="@+id/activity_account_lastname_edittext"
                        android:hint="@string/lastname"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" />
                </TableRow>
                <TableRow>
                    <TextView
                        android:textColor="@android:color/white"
                        android:text="@string/address"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>
                    <EditText
                        android:textColor="@android:color/white"
                        android:id="@+id/activity_account_address_edittext"
                        android:hint="@string/address"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" />
                </TableRow>
                <TableRow>
                    <TextView
                        android:textColor="@android:color/white"
                        android:text="@string/scholarclass"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>
                    <EditText
                        android:textColor="@android:color/white"
                        android:id="@+id/activity_account_scholarClass_edittext"
                        android:hint="@string/scholarclass"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" />
                </TableRow>
                <TableRow>
                    <TextView
                        android:textColor="@android:color/white"
                        android:text="@string/establishment"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>
                    <EditText
                        android:textColor="@android:color/white"
                        android:id="@+id/activity_account_establishment_edittext"
                        android:hint="@string/establishment"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" />
                </TableRow>
                <TableRow>
                    <TextView
                        android:textColor="@android:color/white"
                        android:text="@string/askedCount"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>
                    <EditText
                        android:textColor="@android:color/white"
                        android:id="@+id/activity_account_askedCount_edittext"
                        android:text="@string/zero_value"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:inputType="number"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:textColor="@android:color/white"
                        android:text="@string/answerCount"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>
                    <EditText
                        android:textColor="@android:color/white"
                        android:id="@+id/activity_account_answerCount_edittext"
                        android:text="@string/zero_value"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:inputType="number"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:textColor="@android:color/white"
                        android:text="@string/accountStatus"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:textColor="@android:color/white"
                        android:id="@+id/activity_account_accountStatus_textview"
                        android:text="@string/freemium"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" />
                </TableRow>
                <TableRow>
                    <ListView
                        android:id="@+id/activity_account_rewardBadges_listview"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" >
                    </ListView>
                </TableRow>
            </TableLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/activity_account_update_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/outline_edit_white_18dp"
                app:layout_anchor="@id/activity_account_mainLinearLayout"
                app:layout_anchorGravity="bottom|right|end" />
        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>